MODON MRE BPDEV/force-app/main/default/objects/Outbound_Message_Log__c/Outbound_Message_Log__c.object-meta.xml
<CustomObject>
    <label>Outbound Message Log</label>
    <nameField>
        <displayFormat>OML-{000000}</displayFormat>
        <label>Outbound Message Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Message Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>