MODON MRE BPDEV/force-app/main/default/objects/Outbound_Message_Log__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>