MODON MRE BPDEV/force-app/main/default/objects/Outbound_Message_Log__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>