MODON MRE BPDEV/force-app/main/default/objects/Outbound_Message_Log__c/fields/Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Sent_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sent At</label>
    <type>DateTime</type>
</CustomField>