MODON MRE BPDEV/force-app/main/default/objects/Outbound_Message_Log__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <label>Status Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>