MODON MRE BPDEV/force-app/main/default/objects/Outbound_Message_Log__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Template Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>